--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body {
+.bodyA9 {
     margin: 0;
     font-family: 'Mulish', 'Roboto', sans-serif;
     background-color: #0a0a0a;
@@ -155,5 +155,3 @@ body {
 .commandInputT5::placeholder {
     color: #888;
 }
-
-/* Style.css */
