--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
     align-items: center;
     justify-content: space-between;
     background-color: #101010;
-    padding: 12px 28px;
+    padding: 10px 28px;
     border-bottom: 2px solid #007bff;
     flex-shrink: 0;
 }
@@ -43,6 +43,7 @@
     color: #ccc;
     font-weight: 500;
     transition: 0.2s ease;
+    cursor:pointer;
 }
 
 .linkV1:hover {
@@ -80,6 +81,7 @@
 .dropdownContentL4 a {
     display: block;
     padding: 10px 16px;
+    text-decoration:none;
     color: #ccc;
 }
 
@@ -90,6 +92,15 @@
 
 .dropdownR8.open .dropdownContentL4 {
     display: block;
+}
+
+.dropdownR8 {
+    position: relative;
+}
+
+.dropdownContentL4[data-reverse="true"] {
+    left: auto !important;
+    right: 0 !important;
 }
 
 .bodyY2 {
