--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ body.theme-morning-glow {
     color: var(--text-color);
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    height: 100%;
 }
 
 .navbarX9 {
