--- a/style.css
+++ b/style.css
@@ -64,13 +64,12 @@ body.theme-morning-glow {
 }
 
 .bodyA9 {
-    margin: 0;
-    font-family: 'Inter', 'Mulish' !important;
-    background-color: var(--background-color);
-    color: var(--text-color);
     display: flex;
     flex-direction: column;
     height: 100%;
+    background-color: var(--background-color);
+    color: var(--text-color);
+    font-family: 'Inter', 'Mulish' !important;
 }
 
 .navbarX9 {
@@ -173,6 +172,7 @@ body.theme-morning-glow {
     flex: 1;
     overflow-y: auto;
     padding: 20px;
+    box-sizing: border-box;
 }
 
 .panelC6 {
