--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ body.theme-morning-glow {
     height: 100%;
     background-color: var(--background-color);
     color: var(--text-color);
-    font-family: 'Inter', 'Mulish' !important;
+    font-family: 'Inter', !important;
     text-decoration: none;
 }
 
@@ -92,7 +92,7 @@ body.theme-morning-glow {
     font-weight: 700;
     color: var(--primary-color);
     letter-spacing: 1px;
-    font-family: 'Inter', 'Mulish' !important;
+    font-family: 'Inter' !important;
 }
 
 .listM2 {
@@ -114,7 +114,7 @@ body.theme-morning-glow {
     font-weight: 500;
     transition: 0.2s ease;
     cursor: pointer;
-    font-family: 'Inter', 'Mulish' !important;
+    font-family: 'Inter' !important;
 }
 
 .linkV1:hover {
@@ -153,7 +153,7 @@ body.theme-morning-glow {
     display: block;
     padding: 10px 16px;
     cursor:pointer;
-    font-family: 'Inter', 'Mulish' !important;
+    font-family: 'Inter' !important;
     text-decoration: none !important;
     color: var(--muted-text);
 }
@@ -200,7 +200,7 @@ body.theme-morning-glow {
     transition: transform 0.2s, background-color 0.2s;
     cursor: pointer;
     height: auto;
-    font-family: 'Inter', 'Mulish' !important;
+    font-family: 'Inter' !important;
 }
 
 .cardB9:hover {
