--- a/style.css
+++ b/style.css
@@ -147,6 +147,7 @@ body.theme-morning-glow {
     min-width: 160px;
     top: 35px;
     margin-top:5px;
+    padding-bottom:2px;
     left: 0;
     border: 1px solid var(--primary-color);
     border-radius: 0px;
@@ -216,6 +217,15 @@ body.theme-morning-glow {
     margin: 0 0 10px;
     color: var(--primary-color);
 }
+
+.cardPlus {
+    font-size:67px;
+    color:var(--primary-color);
+    display:block;
+    padding:0px;
+    padding-bottom:15px;
+    margin:0px;
+    }
 
 .cardB9 p {
     margin: 0;
