--- a/style.css
+++ b/style.css
@@ -223,6 +223,7 @@ body.theme-morning-glow {
     color:var(--primary-color);
     display:block;
     padding:0px;
+    padding-bottom:15px;
     margin:0px;
     }
 
