--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ body.theme-morning-glow {
 
 .bodyA9 {
     display: flex;
-    cursor: url("cursor.png"), auto !important;
+    cursor: url("https://raw.githubusercontent.com/Jamesy-tech/BookUI/main/cursor.png"), auto !important;
     flex-direction: column;
     height:100%;
     margin:0px;
