--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ body.theme-morning-glow {
     height:100%;
     margin:0px;
     padding:0px;
-    cursor: url("https://i.imgur.com/un6gkMm.png"), auto !important;
+    cursor: url("https://raw.githubusercontent.com/Jamesy-tech/BookUI/main/cursor.png"), auto !important;
     background-color: var(--background-color);
     color: var(--text-color);
     font-family: 'Mulish', !important;
